// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LuckUtils LuckUtils - calcDefTeamLuckAdj: Defensive Luck Adjustments 1`] = `
{
   "avgEff": 100,
   "luckPct": 0.66,
   "baseDef3P": 0.32521489971346706,
   "baseDef3PSos": 0.3298939828080229,
   "baseDef3PA": 698,
   "basePoss": 2081,
   "base3PSosAdj": -0.0015908882521489841,
   "sampleDef3P": 0.3614457831325301,
   "sampleDef3PSos": 0.3225421686746988,
   "sampleDef3PA": 166,
   "samplePoss": 489,
   "sample3PSosAdj": 0.013227228915662642,
   "sampleDefEfg": 0.4733178654292343,
   "sampleDefPpp": 98.15950920245399,
   "sampleOffSos": 105.45848670756645,
   "sampleDef3PRate": 0.3851508120649652,
   "sampleDefFGA": 431,
   "sampleDefOrb": 0.2947761194029851,
   "avg3PSosAdj": 0.0012561111111111195,
   "adjDef3P": 0.32379827978580994,
   "delta3P": -0.03764750334672018,
   "deltaDefEfg": -0.021749949729311657,
   "deltaDefPppNoOrb": -3.834040218132239,
   "deltaMissesPct": 0.014499966486207773,
   "deltaDefOrbFactor": 0.004292591434828319,
   "deltaPtsOffMisses": 0.4049007002482638,
   "deltaDefPpp": -3.429139517883975,
   "deltaDefAdjEff": -3.2516487055165952
}
`;

exports[`LuckUtils LuckUtils - calcOffTeamLuckAdj (+manual overrides): Offensive Luck Adjustments 1`] = `
{
   "avgEff": 100,
   "samplePoss": 1602,
   "sample3P": 0.31958762886597936,
   "sample3PA": 582,
   "base3PA": 765,
   "player3PInfo": {
      "Cowan, Anthony": {
         "shot_info_ast_3pm": 29,
         "shot_info_early_3pa": 15,
         "shot_info_unast_3pm": 16,
         "shot_info_unknown_3pM": 84,
         "shot_info_total": 144,
         "base3P": 0.3218390804597701,
         "unassisted3P": 0.28221643895033616,
         "assisted3P": 0.34221643895033615,
         "expected3P": 0.5
      },
      "Wiggins, Aaron": {
         "shot_info_ast_3pm": 35,
         "shot_info_early_3pa": 28,
         "shot_info_unast_3pm": 3,
         "shot_info_unknown_3pM": 67,
         "shot_info_total": 133,
         "base3P": 0.31736526946107785,
         "unassisted3P": 0.2608268079226163,
         "assisted3P": 0.3208268079226163,
         "expected3P": 0.31700089699144224
      }
   },
   "sampleBase3P": 0.4121340046926419,
   "regress3P": 0.3721473746027253,
   "sampleOff3PRate": 0.4279411764705882,
   "sampleOffFGA": 1360,
   "sampleOffOrb": 0.30924170616113744,
   "sampleOffEfg": 0.49779411764705883,
   "sampleOffPpp": 108.3645443196005,
   "sampleDefSos": 96.33476903870161,
   "delta3P": 0.05255974573674593,
   "deltaOffEfg": 0.1987387191383671,
   "deltaMissesPct": -0.18749247942557806,
   "deltaOffPppNoOrb": 9.898209491657834,
   "deltaOffOrbFactor": -0.054802989796280586,
   "deltaPtsOffMisses": -6.481152490398434,
   "deltaOffPpp": 11.357597719308,
   "deltaOffAdjEff": 11.789718118019456
}
`;

exports[`LuckUtils LuckUtils - calcOffTeamLuckAdj: Offensive Luck Adjustments 1`] = `
{
   "avgEff": 100,
   "samplePoss": 1602,
   "sample3P": 0.31958762886597936,
   "sample3PA": 582,
   "base3PA": 765,
   "player3PInfo": {
      "Cowan, Anthony": {
         "shot_info_ast_3pm": 29,
         "shot_info_early_3pa": 15,
         "shot_info_unast_3pm": 16,
         "shot_info_unknown_3pM": 84,
         "shot_info_total": 144,
         "base3P": 0.3218390804597701,
         "unassisted3P": 0.28221643895033616,
         "assisted3P": 0.34221643895033615,
         "expected3P": 0.3215403383214054
      },
      "Wiggins, Aaron": {
         "shot_info_ast_3pm": 35,
         "shot_info_early_3pa": 28,
         "shot_info_unast_3pm": 3,
         "shot_info_unknown_3pM": 67,
         "shot_info_total": 133,
         "base3P": 0.31736526946107785,
         "unassisted3P": 0.2608268079226163,
         "assisted3P": 0.3208268079226163,
         "expected3P": 0.31700089699144224
      }
   },
   "sampleBase3P": 0.31936075096802957,
   "regress3P": 0.31945877838941544,
   "sampleOff3PRate": 0.4279411764705882,
   "sampleOffFGA": 1360,
   "sampleOffOrb": 0.30924170616113744,
   "sampleOffEfg": 0.49779411764705883,
   "sampleOffPpp": 108.3645443196005,
   "sampleDefSos": 96.33476903870161,
   "delta3P": -0.00012885047656391313,
   "deltaOffEfg": -0.00008271063679433541,
   "deltaMissesPct": 0.00005514042452955694,
   "deltaOffPppNoOrb": -0.014043254187302892,
   "deltaOffOrbFactor": 0.000017052009726047172,
   "deltaPtsOffMisses": 0.0018475937979895104,
   "deltaOffPpp": -0.01219566038931338,
   "deltaOffAdjEff": -0.01265966640187188
}
`;

exports[`LuckUtils LuckUtils - injectLuck 1`] = `
{
   "off_adj_ppp": {
      "value": 115.19847798271736,
      "old_value": 115.21113764911924,
      "override": "Adjusted from Off 3P%"
   },
   "def_adj_ppp": {
      "value": 86.9605601952294,
      "old_value": 90.212208900746,
      "override": "Adjusted from Def 3P%"
   },
   "off_3p": {
      "value": 0.31945877838941544,
      "old_value": 0.31958762886597936,
      "override": "Luck adjusted"
   },
   "off_ppp": {
      "value": 108.35234865921119,
      "old_value": 108.3645443196005,
      "override": "Adjusted from Off 3P%"
   },
   "off_efg": {
      "value": 0.4977114070102645,
      "old_value": 0.49779411764705883,
      "override": "Adjusted from Off 3P%"
   },
   "def_3p": {
      "value": 0.32379827978580994,
      "old_value": 0.31390977443609025,
      "override": "Luck adjusted"
   },
   "def_ppp": {
      "value": 91.98543334643765,
      "old_value": 95.41457286432161,
      "override": "Adjusted from Def 3P%"
   },
   "def_efg": {
      "value": 0.43575005027068836,
      "old_value": 0.4575,
      "override": "Adjusted from Def 3P%"
   }
}
`;
